2008-08-12  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-arch.patch: Add support for mipsel-linux.

2008-08-12  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/cacao.stamp): Robustify.

2008-08-12  Lillian Angel  <langel@redhat.com>

	* HACKING: Added icedtea-enum-bug-181.patch.

2008-08-12  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-shark.patch: Updated to latest Shark.
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.inline.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/interpreter_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/sharkFrame_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/stack_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/stubGenerator_zero.cpp: Likewise.
	* ports/hotspot/src/share/vm/includeDB_shark: Likewise.
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkCompiler.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkFunction.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkState.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkState.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkType.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkType.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkValue.hpp: Likewise.